// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableReporter with default options with all results under budget writes to output stream with results 1`] = `
"------------|--------|----------|---
 [1mPath[22m       | [1mSize[22m   | [1mMax Size[22m | [1m [22m 
------------|--------|----------|---
 [2mfoo/[22m[1mbar.js[22m | 3.97KB | 4KB      | [32m✓[39m 
 [2mfoo/[22m[1mbaz.js[22m | 3.97KB | 4KB      | [32m✓[39m 
------------|--------|----------|---
            | [1m7.94KB[22m |          |   
------------|--------|----------|---

"
`;

exports[`TableReporter with default options with multiple results over budget writes to output stream with results 1`] = `
"-------------|---------|----------|---
 [1mPath[22m        | [1mSize[22m    | [1mMax Size[22m | [1m [22m 
-------------|---------|----------|---
 [2mfoo/[22m[1mbar.js[22m  | 3.97KB  | 4KB      | [32m✓[39m 
 [2mfoo/[22m[1mbaz.js[22m  | 4.13KB  | 4KB      | [31m✗[39m 
 [2mfoo/[22m[1mqux.js[22m  | 4.16KB  | 4KB      | [31m✗[39m 
 [2mfoo/[22m[1mquux.js[22m | 4.13KB  | 4KB      | [31m✗[39m 
-------------|---------|----------|---
             | [1m16.38KB[22m |          |   
-------------|---------|----------|---

"
`;

exports[`TableReporter with default options with no results writes to output stream with results 1`] = `
"------|------|----------|---
 [1mPath[22m | [1mSize[22m | [1mMax Size[22m | [1m [22m 
------|------|----------|---
      | [1m0B[22m   |          |   
------|------|----------|---

"
`;

exports[`TableReporter with default options with one result over budget writes to output stream with results 1`] = `
"------------|--------|----------|---
 [1mPath[22m       | [1mSize[22m   | [1mMax Size[22m | [1m [22m 
------------|--------|----------|---
 [2mfoo/[22m[1mbar.js[22m | 3.97KB | 4KB      | [32m✓[39m 
 [2mfoo/[22m[1mbaz.js[22m | 4.13KB | 4KB      | [31m✗[39m 
------------|--------|----------|---
            | [1m8.09KB[22m |          |   
------------|--------|----------|---

"
`;

exports[`TableReporter with template \`markdown\` with all results under budget writes to output stream with results 1`] = `
"| [1mPath[22m       | [1mSize[22m   | [1mMax Size[22m | [1m [22m |
|------------|--------|----------|---|
| [2mfoo/[22m[1mbar.js[22m | 3.97KB | 4KB      | [32m✓[39m |
| [2mfoo/[22m[1mbaz.js[22m | 3.97KB | 4KB      | [32m✓[39m |
|            | [1m7.94KB[22m |          |   |


"
`;

exports[`TableReporter with template \`markdown\` with multiple results over budget writes to output stream with results 1`] = `
"| [1mPath[22m        | [1mSize[22m    | [1mMax Size[22m | [1m [22m |
|-------------|---------|----------|---|
| [2mfoo/[22m[1mbar.js[22m  | 3.97KB  | 4KB      | [32m✓[39m |
| [2mfoo/[22m[1mbaz.js[22m  | 4.13KB  | 4KB      | [31m✗[39m |
| [2mfoo/[22m[1mqux.js[22m  | 4.16KB  | 4KB      | [31m✗[39m |
| [2mfoo/[22m[1mquux.js[22m | 4.13KB  | 4KB      | [31m✗[39m |
|             | [1m16.38KB[22m |          |   |


"
`;

exports[`TableReporter with template \`markdown\` with no results writes to output stream with results 1`] = `
"| [1mPath[22m | [1mSize[22m | [1mMax Size[22m | [1m [22m |
|------|------|----------|---|
|      | [1m0B[22m   |          |   |


"
`;

exports[`TableReporter with template \`markdown\` with one result over budget writes to output stream with results 1`] = `
"| [1mPath[22m       | [1mSize[22m   | [1mMax Size[22m | [1m [22m |
|------------|--------|----------|---|
| [2mfoo/[22m[1mbar.js[22m | 3.97KB | 4KB      | [32m✓[39m |
| [2mfoo/[22m[1mbaz.js[22m | 4.13KB | 4KB      | [31m✗[39m |
|            | [1m8.09KB[22m |          |   |


"
`;

exports[`TableReporter with template \`ramac\` with all results under budget writes to output stream with results 1`] = `
"+------------+--------+----------+---+
| [1mPath[22m       | [1mSize[22m   | [1mMax Size[22m | [1m [22m |
|------------|--------|----------|---|
| [2mfoo/[22m[1mbar.js[22m | 3.97KB | 4KB      | [32m✓[39m |
| [2mfoo/[22m[1mbaz.js[22m | 3.97KB | 4KB      | [32m✓[39m |
|------------|--------|----------|---|
|            | [1m7.94KB[22m |          |   |
+------------+--------+----------+---+

"
`;

exports[`TableReporter with template \`ramac\` with multiple results over budget writes to output stream with results 1`] = `
"+-------------+---------+----------+---+
| [1mPath[22m        | [1mSize[22m    | [1mMax Size[22m | [1m [22m |
|-------------|---------|----------|---|
| [2mfoo/[22m[1mbar.js[22m  | 3.97KB  | 4KB      | [32m✓[39m |
| [2mfoo/[22m[1mbaz.js[22m  | 4.13KB  | 4KB      | [31m✗[39m |
| [2mfoo/[22m[1mqux.js[22m  | 4.16KB  | 4KB      | [31m✗[39m |
| [2mfoo/[22m[1mquux.js[22m | 4.13KB  | 4KB      | [31m✗[39m |
|-------------|---------|----------|---|
|             | [1m16.38KB[22m |          |   |
+-------------+---------+----------+---+

"
`;

exports[`TableReporter with template \`ramac\` with no results writes to output stream with results 1`] = `
"+------+------+----------+---+
| [1mPath[22m | [1mSize[22m | [1mMax Size[22m | [1m [22m |
|------|------|----------|---|
|      | [1m0B[22m   |          |   |
+------+------+----------+---+

"
`;

exports[`TableReporter with template \`ramac\` with one result over budget writes to output stream with results 1`] = `
"+------------+--------+----------+---+
| [1mPath[22m       | [1mSize[22m   | [1mMax Size[22m | [1m [22m |
|------------|--------|----------|---|
| [2mfoo/[22m[1mbar.js[22m | 3.97KB | 4KB      | [32m✓[39m |
| [2mfoo/[22m[1mbaz.js[22m | 4.13KB | 4KB      | [31m✗[39m |
|------------|--------|----------|---|
|            | [1m8.09KB[22m |          |   |
+------------+--------+----------+---+

"
`;

exports[`TableReporter without color with all results under budget writes to output stream with results 1`] = `
"------------|--------|----------|---
 Path       | Size   | Max Size |   
------------|--------|----------|---
 foo/bar.js | 3.97KB | 4KB      | ✓ 
 foo/baz.js | 3.97KB | 4KB      | ✓ 
------------|--------|----------|---
            | 7.94KB |          |   
------------|--------|----------|---

"
`;

exports[`TableReporter without color with multiple results over budget writes to output stream with results 1`] = `
"-------------|---------|----------|---
 Path        | Size    | Max Size |   
-------------|---------|----------|---
 foo/bar.js  | 3.97KB  | 4KB      | ✓ 
 foo/baz.js  | 4.13KB  | 4KB      | ✗ 
 foo/qux.js  | 4.16KB  | 4KB      | ✗ 
 foo/quux.js | 4.13KB  | 4KB      | ✗ 
-------------|---------|----------|---
             | 16.38KB |          |   
-------------|---------|----------|---

"
`;

exports[`TableReporter without color with no results writes to output stream with results 1`] = `
"------|------|----------|---
 Path | Size | Max Size |   
------|------|----------|---
      | 0B   |          |   
------|------|----------|---

"
`;

exports[`TableReporter without color with one result over budget writes to output stream with results 1`] = `
"------------|--------|----------|---
 Path       | Size   | Max Size |   
------------|--------|----------|---
 foo/bar.js | 3.97KB | 4KB      | ✓ 
 foo/baz.js | 4.13KB | 4KB      | ✗ 
------------|--------|----------|---
            | 8.09KB |          |   
------------|--------|----------|---

"
`;
